<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ft_sensor_pipeline</name>
  <version>0.1.0</version>
  <description>
    ROS2 pipeline for Robotous 100N 6-axis Force-Torque sensor.
    Part of the Assistive Robotic Dog Co-Walking project (CITRIS).
    Collects, processes, visualizes, and logs F/T data for gait analysis.
  </description>
  <maintainer email="your_email@ucmerced.edu">RoboDog Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rosbag2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
